configmgr_lib = shared_library('configmgrlo',
  'source/access.cxx',
  'source/broadcaster.cxx',
  'source/childaccess.cxx',
  'source/components.cxx',
  'source/configurationprovider.cxx',
  'source/configurationregistry.cxx',
  'source/data.cxx',
  'source/defaultprovider.cxx',
  'source/groupnode.cxx',
  'source/localizedpropertynode.cxx',
  'source/localizedvaluenode.cxx',
  'source/lock.cxx',
  'source/modifications.cxx',
  'source/node.cxx',
  'source/nodemap.cxx',
  'source/parsemanager.cxx',
  'source/partial.cxx',
  'source/propertynode.cxx',
  'source/readonlyaccess.cxx',
  'source/readwriteaccess.cxx',
  'source/rootaccess.cxx',
  'source/rootnode.cxx',
  'source/services.cxx',
  'source/setnode.cxx',
  'source/type.cxx',
  'source/update.cxx',
  'source/valueparser.cxx',
  'source/writemodfile.cxx',
  'source/xcdparser.cxx',
  'source/xcsparser.cxx',
  'source/xcuparser.cxx',
  'source/xmldata.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc'],
  link_with: [comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    sal_lib,
    salhelper_lib,
    tl_lib,
    xmlreader_lib,
    i18nlangtag_lib,
  ],
  install: true,
  gnu_symbol_visibility: 'hidden',
  dependencies: [libxml_dep, zlib_dep],
)
