sql_lex = custom_target('sql_lex',
  output : 'sqlflex.yy.cxx',
  input: 'source/parse/sqlflex.l',
  command : [lex_bin,
             '-i',
             '-8',
             '-PSQLyy',
             '-L',
             '-o',
             '@OUTPUT@',
             '@INPUT@'])

sql_bison = custom_target('sql_bison',
  output : ['sqlbison.cxx', 'sqlbison.hxx'],
  input: 'source/parse/sqlbison.y',
  command : [bison_bin,
             '-d',
             '-l',
             '-pSQLyy',
             '-bsql',
             '-v',
             '@INPUT@',
             '--defines=@OUTPUT1@',
             '--output=@OUTPUT0@'])

dbtools_lib = shared_library('dbtoolslo',
  'source/commontools/AutoRetrievingBase.cxx',
  'source/commontools/BlobHelper.cxx',
  'source/commontools/CommonTools.cxx',
  'source/commontools/ConnectionWrapper.cxx',
  'source/commontools/DateConversion.cxx',
  'source/commontools/DriversConfig.cxx',
  'source/commontools/FDatabaseMetaDataResultSet.cxx',
  'source/commontools/FDatabaseMetaDataResultSetMetaData.cxx',
  'source/commontools/FValue.cxx',
  'source/commontools/ParameterSubstitution.cxx',
  'source/commontools/RowFunctionParser.cxx',
  'source/commontools/TColumnsHelper.cxx',
  'source/commontools/TConnection.cxx',
  'source/commontools/TDatabaseMetaDataBase.cxx',
  'source/commontools/TIndex.cxx',
  'source/commontools/TIndexColumns.cxx',
  'source/commontools/TIndexes.cxx',
  'source/commontools/TKey.cxx',
  'source/commontools/TKeyColumns.cxx',
  'source/commontools/TKeys.cxx',
  'source/commontools/TPrivilegesResultSet.cxx',
  'source/commontools/TSkipDeletedSet.cxx',
  'source/commontools/TSortIndex.cxx',
  'source/commontools/TTableHelper.cxx',
  'source/commontools/conncleanup.cxx',
  'source/commontools/dbcharset.cxx',
  'source/commontools/dbconversion.cxx',
  'source/commontools/dbexception.cxx',
  'source/commontools/dbmetadata.cxx',
  'source/commontools/dbtools.cxx',
  'source/commontools/dbtools2.cxx',
  'source/commontools/filtermanager.cxx',
  'source/commontools/formattedcolumnvalue.cxx',
  'source/commontools/parameters.cxx',
  'source/commontools/paramwrapper.cxx',
  'source/commontools/predicateinput.cxx',
  'source/commontools/propertyids.cxx',
  'source/commontools/sqlerror.cxx',
  'source/commontools/statementcomposer.cxx',
  'source/commontools/warningscontainer.cxx',
  'source/parse/PColumn.cxx',
  'source/parse/internalnode.cxx',
  'source/parse/sqliterator.cxx',
  'source/parse/sqlnode.cxx',
  'source/resource/sharedresources.cxx',
  'source/sdbcx/VCatalog.cxx',
  'source/sdbcx/VCollection.cxx',
  'source/sdbcx/VColumn.cxx',
  'source/sdbcx/VDescriptor.cxx',
  'source/sdbcx/VGroup.cxx',
  'source/sdbcx/VIndex.cxx',
  'source/sdbcx/VIndexColumn.cxx',
  'source/sdbcx/VKey.cxx',
  'source/sdbcx/VKeyColumn.cxx',
  'source/sdbcx/VTable.cxx',
  'source/sdbcx/VUser.cxx',
  'source/sdbcx/VView.cxx',
  udk_fake_h, off_fake_h, sql_lex, sql_bison,
  cpp_args: ['-DOOO_DLLIMPLEMENTATION_DBTOOLS',
             '-DBOOST_SPIRIT_USE_OLD_NAMESPACE',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc'],
  link_with: [cppuhelper_lib, cppu_lib, salhelper_lib, sal_lib, utl_lib, tl_lib, comphelper_lib, i18nlangtag_lib, svt_lib, vcl_lib],
  dependencies: [],
  install: true,
)
