cppcanvas_lib = shared_library('cppcanvaslo',
  'source/mtfrenderer/bitmapaction.cxx',
  'source/mtfrenderer/cachedprimitivebase.cxx',
  'source/mtfrenderer/implrenderer.cxx',
  'source/mtfrenderer/lineaction.cxx',
  'source/mtfrenderer/mtftools.cxx',
  'source/mtfrenderer/pointaction.cxx',
  'source/mtfrenderer/polypolyaction.cxx',
  'source/mtfrenderer/textaction.cxx',
  'source/mtfrenderer/textlineshelper.cxx',
  'source/mtfrenderer/transparencygroupaction.cxx',
  'source/tools/canvasgraphichelper.cxx',
  'source/tools/tools.cxx',
  'source/wrapper/basegfxfactory.cxx',
  'source/wrapper/implbitmap.cxx',
  'source/wrapper/implbitmapcanvas.cxx',
  'source/wrapper/implcanvas.cxx',
  'source/wrapper/implcustomsprite.cxx',
  'source/wrapper/implpolypolygon.cxx',
  'source/wrapper/implsprite.cxx',
  'source/wrapper/implspritecanvas.cxx',
  'source/wrapper/vclfactory.cxx',
  udk_fake_h, off_fake_h,
  cpp_args: ['-DCPPCANVAS_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'source/inc'],
  link_with: [basegfx_lib, canvastools_lib, vcl_lib, svt_lib, tl_lib, cppu_lib, cppuhelper_lib, i18nlangtag_lib, sal_lib],
  install: true,
)
