cppu_lib = shared_library('cppu',
  'source/cppu/compat.cxx',
  'source/cppu/cppu_opt.cxx',
  'source/threadpool/current.cxx',
  'source/threadpool/jobqueue.cxx',
  'source/threadpool/thread.cxx',
  'source/threadpool/threadident.cxx',
  'source/threadpool/threadpool.cxx',
  'source/typelib/static_types.cxx',
  'source/typelib/typelib.cxx',
  'source/uno/any.cxx',
  'source/uno/cascade_mapping.cxx',
  'source/uno/check.cxx',
  'source/uno/data.cxx',
  'source/uno/EnvDcp.cxx',
  'source/uno/EnvStack.cxx',
  'source/uno/IdentityMapping.cxx',
  'source/uno/lbenv.cxx',
  'source/uno/lbmap.cxx',
  'source/uno/loadmodule.cxx',
  'source/uno/sequence.cxx',
  udk_fake_h,
  include_directories: [main_inc, udkh_inc],
  cpp_args: ['-DLIBO_INTERNAL_ONLY',
             '-DCPPU_DLLIMPLEMENTATION'],
  link_with: [salhelper_lib, sal_lib],
  install: true,
)
