subdir('unotypes')

temp_hack = static_library('cppuuno',
  'source/exc_thrower.cxx',
  udk_fake_h, off_fake_h, cppuhelper_fake_h,
  include_directories: [main_inc, udkh_inc, offapi_inc, cpphelper_uno_inc],
)

cppuhelper_lib = shared_library('cpphelper',
  'source/access_control.cxx',
  'source/bootstrap.cxx',
  'source/compat.cxx',
  'source/component_context.cxx',
  'source/component.cxx',
  'source/defaultbootstrap.cxx',
  'source/factory.cxx',
  'source/implbase.cxx',
  'source/implbase_ex.cxx',
  'source/implementationentry.cxx',
  'source/interfacecontainer.cxx',
  'source/macro_expander.cxx',
  'source/paths.cxx',
  'source/propertysetmixin.cxx',
  'source/propshlp.cxx',
  'source/servicemanager.cxx',
  'source/shlib.cxx',
  'source/supportsservice.cxx',
  'source/tdmgr.cxx',
  'source/typemanager.cxx',
  'source/typeprovider.cxx',
  'source/unourl.cxx',
  'source/weak.cxx',
  'source/findsofficepath.c',
  udk_fake_h, off_fake_h, cppuhelper_fake_h,
  include_directories: [main_inc, udkh_inc, offapi_inc, cpphelper_uno_inc],
  cpp_args: ['-DCPPUHELPER_DLLIMPLEMENTATION', '-DLIBO_INTERNAL_ONLY'],
  link_with: [temp_hack, cppu_lib, reg_lib, salhelper_lib, sal_lib, unoidl_lib, xmlreader_lib],
)
