cui_lib = shared_library('cuilo',
  'source/customize/acccfg.cxx',
  'source/customize/cfg.cxx',
  'source/customize/cfgutil.cxx',
  'source/customize/CommandCategoryListBox.cxx',
  'source/customize/eventdlg.cxx',
  'source/customize/macropg.cxx',
  'source/customize/SvxConfigPageHelper.cxx',
  'source/customize/SvxMenuConfigPage.cxx',
  'source/customize/SvxToolbarConfigPage.cxx',
  'source/customize/SvxNotebookbarConfigPage.cxx',
  'source/customize/CustomNotebookbarGenerator.cxx',
  'source/dialogs/about.cxx',
  'source/dialogs/colorpicker.cxx',
  'source/dialogs/cuicharmap.cxx',
  'source/dialogs/cuifmsearch.cxx',
  'source/dialogs/cuigaldlg.cxx',
  'source/dialogs/cuigrfflt.cxx',
  'source/dialogs/cuihyperdlg.cxx',
  'source/dialogs/cuiimapwnd.cxx',
  'source/dialogs/cuitbxform.cxx',
  'source/dialogs/dlgname.cxx',
  'source/dialogs/DiagramDialog.cxx',
  'source/dialogs/FontFeaturesDialog.cxx',
  'source/dialogs/hangulhanjadlg.cxx',
  'source/dialogs/hldocntp.cxx',
  'source/dialogs/hldoctp.cxx',
  'source/dialogs/hlinettp.cxx',
  'source/dialogs/hlmailtp.cxx',
  'source/dialogs/hlmarkwn.cxx',
  'source/dialogs/hltpbase.cxx',
  'source/dialogs/hyphen.cxx',
  'source/dialogs/iconcdlg.cxx',
  'source/dialogs/tipofthedaydlg.cxx',
  'source/dialogs/insdlg.cxx',
  'source/dialogs/insrc.cxx',
  'source/dialogs/linkdlg.cxx',
  'source/dialogs/multipat.cxx',
  'source/dialogs/newtabledlg.cxx',
  'source/dialogs/passwdomdlg.cxx',
  'source/dialogs/screenshotannotationdlg.cxx',
  'source/dialogs/pastedlg.cxx',
  'source/dialogs/postdlg.cxx',
  'source/dialogs/QrCodeGenDialog.cxx',
  'source/dialogs/scriptdlg.cxx',
  'source/dialogs/SignatureLineDialogBase.cxx',
  'source/dialogs/SignatureLineDialog.cxx',
  'source/dialogs/SignSignatureLineDialog.cxx',
  'source/dialogs/sdrcelldlg.cxx',
  'source/dialogs/showcols.cxx',
  'source/dialogs/SpellDialog.cxx',
  'source/dialogs/splitcelldlg.cxx',
  'source/dialogs/srchxtra.cxx',
  'source/dialogs/thesdlg.cxx',
  'source/dialogs/zoom.cxx',
  'source/factory/cuiexp.cxx',
  'source/factory/cuiresmgr.cxx',
  'source/factory/dlgfact.cxx',
  'source/factory/init.cxx',
  'source/options/certpath.cxx',
  'source/options/cfgchart.cxx',
  'source/options/connpoolconfig.cxx',
  'source/options/connpooloptions.cxx',
  'source/options/connpoolsettings.cxx',
  'source/options/cuisrchdlg.cxx',
  'source/options/dbregister.cxx',
  'source/options/dbregisterednamesconfig.cxx',
  'source/options/dbregistersettings.cxx',
  'source/options/doclinkdialog.cxx',
  'source/options/fontsubs.cxx',
  'source/options/optaboutconfig.cxx',
  'source/options/optaccessibility.cxx',
  'source/options/optasian.cxx',
  # scripting
  'source/options/optbasic.cxx',
  'source/options/optchart.cxx',
  'source/options/optcolor.cxx',
  'source/options/optctl.cxx',
  'source/options/optdict.cxx',
  'source/options/optfltr.cxx',
  'source/options/optgdlg.cxx',
  'source/options/optgenrl.cxx',
  'source/options/opthtml.cxx',
  'source/options/optinet2.cxx',
  'source/options/optjava.cxx',
  'source/options/optjsearch.cxx',
  'source/options/optlingu.cxx',
#  'source/options/optopencl).cxx',
  'source/options/optpath.cxx',
  'source/options/optsave.cxx',
  'source/options/optupdt.cxx',
  # Desktop
  'source/options/personalization.cxx',
  'source/options/sdbcdriverenum.cxx',
  'source/options/securityoptions.cxx',
  'source/options/treeopt.cxx',
  'source/options/tsaurls.cxx',
  'source/options/webconninfo.cxx',
  'source/tabpages/align.cxx',
  'source/tabpages/autocdlg.cxx',
  'source/tabpages/backgrnd.cxx',
  'source/tabpages/bbdlg.cxx',
  'source/tabpages/border.cxx',
  'source/tabpages/chardlg.cxx',
  'source/tabpages/connect.cxx',
  'source/tabpages/dstribut.cxx',
  'source/tabpages/grfpage.cxx',
  'source/tabpages/labdlg.cxx',
  'source/tabpages/macroass.cxx',
  'source/tabpages/measure.cxx',
  'source/tabpages/numfmt.cxx',
  'source/tabpages/numpages.cxx',
  'source/tabpages/page.cxx',
  'source/tabpages/paragrph.cxx',
  'source/tabpages/swpossizetabpage.cxx',
  'source/tabpages/tabarea.cxx',
  'source/tabpages/tabline.cxx',
  'source/tabpages/tabstpge.cxx',
  'source/tabpages/textanim.cxx',
  'source/tabpages/textattr.cxx',
  'source/tabpages/tparea.cxx',
  'source/tabpages/tpbitmap.cxx',
  'source/tabpages/tpcolor.cxx',
  'source/tabpages/tpgradnt.cxx',
  'source/tabpages/tphatch.cxx',
  'source/tabpages/tpline.cxx',
  'source/tabpages/tplnedef.cxx',
  'source/tabpages/tplneend.cxx',
  'source/tabpages/tppattern.cxx',
  'source/tabpages/tpshadow.cxx',
  'source/tabpages/tptrans.cxx',
  'source/tabpages/transfrm.cxx',
  'source/uno/services.cxx',
  udk_fake_h, off_fake_h, common_hxx, optionsdialog_hxx,
  cpp_args: ['-DCUI_DLLIMPLEMENTATION',
             '-DLIBO_INTERNAL_ONLY'],
  include_directories: [main_inc, udkh_inc, offapi_inc, 'inc', 'source/inc', setup_inc],
  link_with: [avmedia_lib,
    basegfx_lib,
    comphelper_lib,
    cppu_lib,
    cppuhelper_lib,
    drawinglayer_lib,
    editeng_lib,
    i18nlangtag_lib,
    i18nutil_lib,
    lng_lib,
    sal_lib,
    salhelper_lib,
    sax_lib,
    sb_lib,
    sfx_lib,
    sot_lib,
    svl_lib,
    svt_lib,
    svxcore_lib,
    svx_lib,
    tk_lib,
    tl_lib,
    ucbhelper_lib,
    utl_lib,
    vcl_lib
  ],
  dependencies: [libxml_dep, icuuc_dep, qrcodegen_dep],
  install: true,
)

